# carribulus

./: .env.example  .gitignore  Dockerfile  Dockerfile.ui  docker-compose.yml  logs.txt  pyproject.toml  report.md
knowledge/: user_preference.txt
src/carribulus/: crew.py  main.py
src/carribulus/api/: db.py  main.py  models.py  utils.py
src/carribulus/config/: agents.yaml  tasks.yaml
src/carribulus/llms/: __init__.py  providers.py
src/carribulus/tools/: __init__.py  custom_tool.py  search_tools.py  serpapi_tools.py  serper_tools.py  tavily_tools.py  vision_tools.py
src/carribulus/ui/: app.py
tests/: test_mlflow_sqlite.py
