[project]
name = "carribulus"
version = "0.1.0"
description = "carribulus using crewAI"
authors = [{ name = "Kai Feng", email = "dreamkfeng@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.2.1",
    "litellm>=1.79.0",
    "tavily-python>=0.7.12",
]

[project.scripts]
carribulus = "carribulus.main:run"
run_crew = "carribulus.main:run"
train = "carribulus.main:train"
replay = "carribulus.main:replay"
test = "carribulus.main:test"
run_with_trigger = "carribulus.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
